perf(opencypher): split on a literal delimiter without a regex
split() passed its delimiter to String.split wrapped in Pattern.quote. The
quoted form (`\Q...\E`) never qualifies for String.split's fast path, so
every call compiled a regex, once per row, even for a one-character
delimiter. On JDK 21 a quoted split of "a,b,c" allocates about 1,040 bytes
per call, against 232 for the fast path.

The delimiter is now found with indexOf. The pieces are unchanged: the
string is cut at every non-overlapping occurrence, left to right, and empty
leading, inner and trailing pieces are kept.

The test compares the result with str.split(Pattern.quote(d), -1) for
regex-syntax delimiters, a self-overlapping delimiter, delimiters at either
end, an empty input and surrogate pairs.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>